--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 	<groupId>ch.epfl.biop</groupId>
 	<artifactId>bigdataviewer-selector</artifactId>
-	<version>0.1.3-SNAPSHOT</version>
+	<version>0.1.3</version>
 
 	<name>Selector For BigDataViewer</name>
 	<description>Selector Behaviours for BigDataViewer</description>
@@ -115,7 +115,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/NicoKiaru/bigdataviewer-selector</connection>
 		<developerConnection>scm:git:git@github.com:NicoKiaru/bigdataviewer-selector</developerConnection>
-		<tag>HEAD</tag>
+		<tag>bigdataviewer-selector-0.1.3</tag>
 		<url>https://github.com/NicoKiaru/bigdataviewer-selector</url>
 	</scm>
 	
