--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 	<groupId>ch.epfl.biop</groupId>
 	<artifactId>bigdataviewer-selector</artifactId>
-	<version>0.1.4</version>
+	<version>0.1.5-SNAPSHOT</version>
 
 	<name>Selector For BigDataViewer</name>
 	<description>Selector Behaviours for BigDataViewer</description>
@@ -134,6 +134,10 @@
 		<license.copyrightOwners>N/A</license.copyrightOwners>
 		<package-name>ch.epfl.biop.bdv.select</package-name>
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
+		
+		<bigdataviewer-core.version>10.0.0</bigdataviewer-core.version>
+		<bigdataviewer-vistools.version>1.0.0-beta-22</bigdataviewer-vistools.version>
+		<imglib2-cache.version>1.0.0-beta-15</imglib2-cache.version>
 	</properties>
 
 	<repositories>
