--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,11 @@
 #release configuration
-#Thu Oct 15 13:25:34 CEST 2020
+#Thu Oct 15 13:42:03 CEST 2020
 project.scm.ch.epfl.biop\:bigdataviewer-selector.tag=HEAD
 project.scm.ch.epfl.biop\:bigdataviewer-selector.url=https\://github.com/NicoKiaru/bigdataviewer-selector
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 scm.tag=bigdataviewer-selector-0.1.5
 pushChanges=false
-scm.url=scm\:git\:git@github.com\:NicoKiaru/bigdataviewer-selector
+scm.url=scm\:git\:git\://github.com/NicoKiaru/bigdataviewer-selector
 preparationGoals=clean verify
 project.dev.ch.epfl.biop\:bigdataviewer-selector=0.1.6-SNAPSHOT
 project.rel.ch.epfl.biop\:bigdataviewer-selector=0.1.5
@@ -16,4 +16,4 @@ project.scm.ch.epfl.biop\:bigdataviewer-selector.developerConnection=scm\:git\:g
 project.scm.ch.epfl.biop\:bigdataviewer-selector.connection=scm\:git\:git\://github.com/NicoKiaru/bigdataviewer-selector
 exec.snapshotReleasePluginAllowed=false
 exec.additionalArguments=-Dgpg.skip\=true  -P deploy-to-scijava
-completedPhase=generate-release-poms
+completedPhase=end-release
