--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>ch.epfl.biop</groupId>
 	<artifactId>bigdataviewer-selector</artifactId>
-	<version>0.1.9-SNAPSHOT</version>
+	<version>0.1.9</version>
 
 	<name>Selector For BigDataViewer</name>
 	<description>Selector Behaviours for BigDataViewer</description>
@@ -104,7 +104,7 @@
 		<connection>scm:git:git://github.com/BIOP/bigdataviewer-selector</connection>
 		<developerConnection>scm:git:git@github.com:BIOP/bigdataviewer-selector</developerConnection>
 		<url>https://github.com/BIOP/bigdataviewer-selector</url>
-	  <tag>HEAD</tag>
+	  <tag>bigdataviewer-selector-0.1.9</tag>
   </scm>
 	
 	<issueManagement>
