--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>32.0.0-beta-4</version>
+		<version>32.0.0</version>
 		<relativePath />
 	</parent>
 
 	<groupId>ch.epfl.biop</groupId>
 	<artifactId>bigdataviewer-selector</artifactId>
-	<version>0.1.10-SNAPSHOT</version>
+	<version>0.2.0-SNAPSHOT</version>
 
 	<name>Selector For BigDataViewer</name>
 	<description>Selector Behaviours for BigDataViewer</description>
@@ -122,12 +122,6 @@
 		<license.copyrightOwners>N/A</license.copyrightOwners>
 		<package-name>ch.epfl.biop.bdv.select</package-name>
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
-		
-		<bigdataviewer-core.version>10.4.1</bigdataviewer-core.version>
-		<bigdataviewer-vistools.version>1.0.0-beta-30</bigdataviewer-vistools.version>
-		<imglib2-cache.version>1.0.0-beta-16</imglib2-cache.version>
-		<ui-behaviour.version>2.0.6</ui-behaviour.version>
-
 	</properties>
 
 	<repositories>
