puts net.imagej:imagej dependency in test scope

--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,7 @@
 		<dependency>
 			<groupId>net.imagej</groupId>
 			<artifactId>imagej</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
